<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textSize="30dp"
        android:layout_marginTop="140dp"
        android:textColor="@color/color_blue_text"
        android:text="@string/check_wifi"
        android:textStyle="italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/go_set"
        android:layout_marginTop="300dp"
        android:text="@string/go_set"
        android:textSize="30dp"
        android:textColor="#fff"
        android:background="@mipmap/confirm_bg"
        android:layout_width="175dp"
        android:layout_height="50dp" />
    <Button
        android:id="@+id/set_ok"
        android:layout_marginTop="300dp"
        android:layout_alignParentRight="true"
        android:text="@string/go_ok"
        android:textSize="30dp"
        android:textColor="#fff"
        android:background="@mipmap/confirm_bg"
        android:layout_width="175dp"
        android:layout_height="50dp" />

</RelativeLayout>