<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/aler_descr"
        android:text="@string/app_name"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/aler_cancel"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:background="@drawable/layout_board"
        android:text="@string/cancel"
        android:layout_below="@+id/aler_descr"
        android:layout_width="60dp"
        android:layout_height="30dp" />
    <Button
        android:id="@+id/aler_ok"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/layout_board"
        android:layout_alignParentRight="true"
        android:text="@string/confirm"
        android:layout_below="@+id/aler_descr"
        android:layout_width="60dp"
        android:layout_height="30dp" />
</RelativeLayout>